--- a/UniversityWebService/src/main/resources/application.properties
+++ b/UniversityWebService/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/universitydb
+spring.datasource.username=root
+spring.datasource.password=aleksa321
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
