--- a/FrontendWebService/angular.json
+++ b/FrontendWebService/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/FrontendWebService",
+            "outputPath": "~/projects/UniversityWebService/UniversityWebService/src/main/resources",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
