--- a/FrontendWebService/angular.json
+++ b/FrontendWebService/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "../../UniversityWebService/UniversityWebService/src/main/resources/static/",
+            "outputPath": "C:/Users/Damir/git/UniversityWebService/UniversityWebService/src/main/resources/static/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
