--- a/UniversityWebService/pom.xml
+++ b/UniversityWebService/pom.xml
@@ -47,7 +47,10 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.4</version>
 		</dependency>
-               
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
