--- a/UniversityWebService/src/main/resources/application.properties
+++ b/UniversityWebService/src/main/resources/application.properties
@@ -3,4 +3,8 @@ spring.datasource.username=root
 spring.datasource.password=aleksa321
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+storage.location=./uploads
