--- a/UniversityWebService/src/main/resources/application.properties
+++ b/UniversityWebService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/universitydb
 spring.datasource.username=root
-spring.datasource.password=aleksa321
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
